@@ -1,5 +1,5 @@
 application: financmanag
-version: 0-2-1 
+version: 0-2-2 
 runtime: python27
 api_version: 1
 threadsafe: true
