@@ -1,3 +1,7 @@
+Version 0-2-1 - 2012-05-13
+Features:
+	* Status per given month
+
 Version 0-2-1 - 2012-04-01
 Bugfix:
 	* checks if list of expences of one kind is not empty
